--- a/WufooThemeKit/index.html
+++ b/WufooThemeKit/index.html
@@ -182,7 +182,7 @@ Check out the README.txt for more info.
 			</span>
 		</li>
 
-		<li>
+		<li class="phone">
 			<label class="desc">Phone Field</label>
 			<span>
 			<input class="field text" type="tel" size="3" maxlength="3" value=""/> -
